travis: make sure empty dirs are created

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,6 @@ python:
 install:
   - pip install sphinx pylatest
 script:
+  - mkdir -p _static _build _templates
   - sphinx-build -aE -nW -b html . _build/html
   - sphinx-build -b linkcheck . _build/linkcheck
