--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 python:
   - "2.7"
 install:
-  - pip install sphinx pylatest
+  - pip install -r requirements.txt
 script:
   - mkdir -p _static _build _templates
   - sphinx-build -aE -nW -b html . _build/html
